***Основа:*** *шрифт* *стили body, page*

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="#" />
   </head>
 
-  <body class="page">
+  <body class="body">
+    <div class="page">
+      <p>Тренировки</p>
+    </div>
+
     <script src="./script.js"></script>
     <script src="./anton.js"></script>
   </body>
