--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
 
 -->
       <p class="par">Тренировки</p>
+      <div class="switch">
+        <button
+          class="switch__button-light theme"
+          type="button"
+          name="Кнопка"
+          aria-label="Кнопка светлой темы"
+        ></button>
+
+        <div class="switch__flag-box">
+          <!-- <img
+          src="./images/images-menu/switch_green.svg"
+          alt="Флажок"
+          class="switch__flag"
+        /> -->
+        </div>
+        <button
+          class="switch__button-dark theme"
+          type="button"
+          name="Кнопка"
+          aria-label="Кнопка тёмной темы"
+        ></button>
+      </div>
     </div>
 
     <script src="./JS/index.js"></script>
