--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body class="body">
-    <div class="page theme light">
+    <div class="page theme">
       <section class="menu">
         <button
           class="menu__button"
@@ -28,23 +28,17 @@
           <nav class="menu__navigation">
             <ul class="nav-block nav-block_header">
               <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link nav-block__link_header theme light"
+                <a href="#" class="nav-block__link nav-block__link_header theme"
                   >Покрытия и градиенты</a
                 >
               </li>
               <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link nav-block__link_header theme light"
+                <a href="#" class="nav-block__link nav-block__link_header theme"
                   >Велосипеды</a
                 >
               </li>
               <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link nav-block__link_header theme light"
+                <a href="#" class="nav-block__link nav-block__link_header theme"
                   >Тренировки</a
                 >
               </li>
@@ -105,7 +99,7 @@
       </div>
       <footer class="footer theme">
         <div class="footer__subscribe-block">
-          <h2 class="footer__title">Подпишитесь на рассылку —</h2>
+          <h2 class="footer__title theme">Подпишитесь на рассылку —</h2>
           <form class="footer__form" action="">
             <input
               class="footer__email theme"
@@ -116,12 +110,8 @@
           </form>
         </div>
         <div class="footer__subblock">
-          <p class="footer__copy-right light">© Road Club 2021</p>
-          <img
-            src="./images/logo/logo__COLOR_main-1.svg"
-            class="footer__logo-image"
-            alt="Логотип"
-          />
+          <p class="footer__copy-right theme">© Road Club 2021</p>
+          <div class="footer__logo-image theme"></div>
           <div class="switch switch_footer">
             <button
               class="switch__button-light theme"
