--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               aria-label="Кнопка светлой темы"
             ></button>
 
-            <div class="switch__flag-box">
+            <div class="switch__flag-box theme">
               <!-- <img
               src="./images/images-menu/switch_green.svg"
               alt="Флажок"
@@ -83,7 +83,7 @@
           aria-label="Кнопка светлой темы"
         ></button>
 
-        <div class="switch__flag-box">
+        <div class="switch__flag-box theme">
           <!-- <img
           src="./images/images-menu/switch_green.svg"
           alt="Флажок"
@@ -120,7 +120,7 @@
               aria-label="Кнопка светлой темы"
             ></button>
 
-            <div class="switch__flag-box">
+            <div class="switch__flag-box theme">
               <!-- <img
             src="./images/images-menu/switch_green.svg"
             alt="Флажок"
