--- a/index.html
+++ b/index.html
@@ -52,14 +52,7 @@
               name="Кнопка"
               aria-label="Кнопка светлой темы"
             ></button>
-
-            <div class="switch__flag-box theme">
-              <!-- <img
-              src="./images/images-menu/switch_green.svg"
-              alt="Флажок"
-              class="switch__flag"
-            /> -->
-            </div>
+            <div class="switch__flag-box theme"></div>
             <button
               class="switch__button-dark theme"
               type="button"
@@ -69,7 +62,24 @@
           </div>
         </div>
       </section>
-
+      <main class="main">
+        <section class="merckx">
+          <!-- <img
+            src="./images/image-markes.png"
+            class="merckx__image"
+            alt="Фотография"
+          /> -->
+          <div class="merckx__image"></div>
+          <div class="merckx__description">
+            <p class="merckx__quote theme">
+              «Катайся много или мало, долго или коротко, как хочешь - но
+              катайся»
+            </p>
+            <p class="merckx__name theme">Эдди Меркс</p>
+            <p class="merckx__sport theme">Велогонщик</p>
+          </div>
+        </section>
+      </main>
       <!--
 
 
