--- a/index.html
+++ b/index.html
@@ -25,25 +25,23 @@
           aria-label="Кнока меню"
         ></button>
         <div class="menu__subblock">
-          <nav class="menu__navigation">
-            <ul class="nav-block nav-block_header">
-              <li class="nav-block__wrapper">
-                <a href="#" class="nav-block__link nav-block__link_header theme"
-                  >Покрытия и градиенты</a
-                >
-              </li>
-              <li class="nav-block__wrapper">
-                <a href="#" class="nav-block__link nav-block__link_header theme"
-                  >Велосипеды</a
-                >
-              </li>
-              <li class="nav-block__wrapper">
-                <a href="#" class="nav-block__link nav-block__link_header theme"
-                  >Тренировки</a
-                >
-              </li>
-            </ul>
-          </nav>
+          <ul class="nav-block nav-block_header">
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_header nav-block__link theme"
+                >Покрытия и градиенты</a
+              >
+            </li>
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_header nav-block__link theme"
+                >Велосипеды</a
+              >
+            </li>
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_header nav-block__link theme"
+                >Тренировки</a
+              >
+            </li>
+          </ul>
 
           <div class="switch">
             <button
@@ -64,11 +62,6 @@
       </section>
       <main class="main">
         <section class="merckx">
-          <!-- <img
-            src="./images/image-markes.png"
-            class="merckx__image"
-            alt="Фотография"
-          /> -->
           <div class="merckx__image"></div>
           <div class="merckx__description">
             <p class="merckx__quote theme">
