--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </section>
       <main class="main">
-        <section class="merckx">
+        <!-- <section class="merckx">
           <div class="merckx__image"></div>
           <div class="merckx__description">
             <p class="merckx__quote theme">
@@ -71,6 +71,23 @@
             <p class="merckx__name theme">Эдди Меркс</p>
             <p class="merckx__sport theme">Велогонщик</p>
           </div>
+        </section> -->
+        <section class="training">
+          <h2 class="training__title">Тренировки</h2>
+          <p class="training__description">
+            Чтобы найти маршрут для тренировки можно воспользоваться сервисом
+            Komoot, а записать эти тренировки поможет приложение Strava, а также
+            это приложение позволит построить тренировочный план.
+          </p>
+          <ul class="nav-block_training nav-block">
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link theme">Strava</a>
+            </li>
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link theme">Komoot</a>
+            </li>
+          </ul>
+          <div class="training__image"></div>
         </section>
       </main>
       <!--
