--- a/index.html
+++ b/index.html
@@ -73,18 +73,22 @@
           </div>
         </section> -->
         <section class="training">
-          <h2 class="training__title">Тренировки</h2>
-          <p class="training__description">
+          <h2 class="training__title theme">Тренировки</h2>
+          <p class="training__description theme">
             Чтобы найти маршрут для тренировки можно воспользоваться сервисом
             Komoot, а записать эти тренировки поможет приложение Strava, а также
             это приложение позволит построить тренировочный план.
           </p>
           <ul class="nav-block_training nav-block">
             <li class="nav-block__wrapper">
-              <a href="#" class="nav-block__link theme">Strava</a>
+              <a href="#" class="nav-block__link_training nav-block__link theme"
+                >Strava</a
+              >
             </li>
             <li class="nav-block__wrapper">
-              <a href="#" class="nav-block__link theme">Komoot</a>
+              <a href="#" class="nav-block__link_training nav-block__link theme"
+                >Komoot</a
+              >
             </li>
           </ul>
           <div class="training__image"></div>
