--- a/index.html
+++ b/index.html
@@ -86,13 +86,7 @@
           aria-label="Кнопка светлой темы"
         ></button>
 
-        <div class="switch__flag-box theme">
-          <!-- <img
-          src="./images/images-menu/switch_green.svg"
-          alt="Флажок"
-          class="switch__flag"
-        /> -->
-        </div>
+        <div class="switch__flag-box theme"></div>
         <button
           class="switch__button-dark theme"
           type="button"
