--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </section>
       <main class="main">
-        <!-- <section class="merckx">
+        <section class="merckx">
           <div class="merckx__image"></div>
           <div class="merckx__description">
             <p class="merckx__quote theme">
@@ -71,7 +71,7 @@
             <p class="merckx__name theme">Эдди Меркс</p>
             <p class="merckx__sport theme">Велогонщик</p>
           </div>
-        </section> -->
+        </section>
         <section class="training">
           <h2 class="training__title theme">Тренировки</h2>
           <p class="training__description theme">
@@ -98,8 +98,8 @@
 
 
 -->
-      <p class="par">Тренировки</p>
-      <div class="switch">
+      <!-- <p class="par">Тренировки</p> -->
+      <div class="switch center">
         <button
           class="switch__button-light theme"
           type="button"
