--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </section>
       <main class="main">
-        <section class="merckx">
+        <!-- <section class="merckx">
           <div class="merckx__image"></div>
           <div class="merckx__description">
             <p class="merckx__quote theme">
@@ -71,8 +71,8 @@
             <p class="merckx__name theme">Эдди Меркс</p>
             <p class="merckx__sport theme">Велогонщик</p>
           </div>
-        </section>
-        <section class="training">
+        </section> -->
+        <!-- <section class="training">
           <h2 class="training__title theme">Тренировки</h2>
           <p class="training__description theme">
             Чтобы найти маршрут для тренировки можно воспользоваться сервисом
@@ -92,7 +92,7 @@
             </li>
           </ul>
           <div class="training__image"></div>
-        </section>
+        </section> -->
       </main>
       <!--
 
@@ -115,7 +115,7 @@
           aria-label="Кнопка тёмной темы"
         ></button>
       </div>
-      <footer class="footer theme">
+      <!-- <footer class="footer theme">
         <div class="footer__subscribe-block">
           <h2 class="footer__title theme">Подпишитесь на рассылку —</h2>
           <form class="footer__form" action="">
@@ -137,14 +137,7 @@
               name="Кнопка"
               aria-label="Кнопка светлой темы"
             ></button>
-
-            <div class="switch__flag-box theme">
-              <!-- <img
-            src="./images/images-menu/switch_green.svg"
-            alt="Флажок"
-            class="switch__flag"
-          /> -->
-            </div>
+            <div class="switch__flag-box theme"></div>
             <button
               class="switch__button-dark theme"
               type="button"
@@ -153,7 +146,7 @@
             ></button>
           </div>
         </div>
-      </footer>
+      </footer> -->
     </div>
 
     <script src="./JS/index.js"></script>
