--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
         </div>
       </section>
       <main class="main">
+        <section class="first-block">
+          <div class="first-block__stiky-image"></div>
+          <h1 class="first-block__title theme">Шоссе, ТТ и Грэвел</h1>
+          <p class="first-block__description theme">
+            Триатлонные старты, горные серпантины или грейвел заезды по
+            живописным маршрутам – нужно только определиться с выбором
+            велосипеда и отправиться в путь.
+          </p>
+          <button class="first-block__button" type="button">Подробнее</button>
+          <p class="first-block__model-bike">Cannondale Systemsix</p>
+          <div class="first-block__image"></div>
+        </section>
         <!-- <section class="merckx">
           <div class="merckx__image"></div>
           <div class="merckx__description">
