--- a/index.html
+++ b/index.html
@@ -61,6 +61,74 @@
         </div>
       </section>
       <main class="main">
+        <section class="type">
+          <div class="type__slider item-1">
+            <h2 class="type__title">Шоссе</h2>
+            <p class="type__description">
+              На шоссейном велосипеде можно ездить по асфальту на разных
+              градиентах: будь то горы или равнины. Гонки проходят в командном
+              пелотоне, но тренироваться можно и самостоятельно.
+            </p>
+            <div class="type__image-1"></div>
+            <div class="type__image-2"></div>
+          </div>
+          <!-- <div class="slider item-2">
+            <h2 class="type__title">Шоссе</h2>
+            <p class="type__description">
+              На шоссейном велосипеде можно ездить по асфальту на разных
+              градиентах: будь то горы или равнины. Гонки проходят в командном
+              пелотоне, но тренироваться можно и самостоятельно.
+            </p>
+            <div class="type__image-1"></div>
+            <div class="type__image-2"></div>
+            <div class="type__block-buttons">
+              <button
+                class="type__button type__button_lefl"
+                type="button"
+                aria-label="Кнопка переключения"
+              ></button>
+              <button
+                class="type__button type__button_right"
+                type="button"
+                aria-label="Кнопка переключения"
+              ></button>
+            </div>
+          </div>
+          <div class="slider iten-3">
+            <h2 class="type__title">Шоссе</h2>
+            <p class="type__description">
+              На шоссейном велосипеде можно ездить по асфальту на разных
+              градиентах: будь то горы или равнины. Гонки проходят в командном
+              пелотоне, но тренироваться можно и самостоятельно.
+            </p>
+            <div class="type__image-1"></div>
+            <div class="type__image-2"></div>
+            <div class="type__block-buttons">
+              <button
+                class="type__button type__button_lefl"
+                type="button"
+                aria-label="Кнопка переключения"
+              ></button>
+              <button
+                class="type__button type__button_right"
+                type="button"
+                aria-label="Кнопка переключения"
+              ></button>
+            </div>
+          </div> -->
+          <div class="type__block-buttons">
+            <button
+              class="type__button type__button_lefl"
+              type="button"
+              aria-label="Кнопка переключения"
+            ></button>
+            <button
+              class="type__button type__button_right"
+              type="button"
+              aria-label="Кнопка переключения"
+            ></button>
+          </div>
+        </section>
         <!-- <section class="merckx">
           <div class="merckx__image"></div>
           <div class="merckx__description">
