--- a/index.html
+++ b/index.html
@@ -62,15 +62,40 @@
       </section>
       <main class="main">
         <section class="type">
-          <div class="type__slider item-1">
-            <h2 class="type__title">Шоссе</h2>
-            <p class="type__description">
-              На шоссейном велосипеде можно ездить по асфальту на разных
-              градиентах: будь то горы или равнины. Гонки проходят в командном
-              пелотоне, но тренироваться можно и самостоятельно.
-            </p>
-            <div class="type__image-1"></div>
-            <div class="type__image-2"></div>
+          <div class="type__line"></div>
+          <div class="wrapper">
+            <div class="slider-box">
+              <div class="type__slider item">
+                <h2 class="type__title theme">Шоссе</h2>
+                <p class="type__description theme">
+                  На шоссейном велосипеде можно ездить по асфальту на разных
+                  градиентах: будь то горы или равнины. Гонки проходят в
+                  командном пелотоне, но тренироваться можно и самостоятельно.
+                </p>
+                <div class="type__image-1 foto-1"></div>
+                <div class="type__image-2 foto-2"></div>
+              </div>
+              <div class="type__slider item">
+                <h2 class="type__title theme">Грэвел</h2>
+                <p class="type__description theme">
+                  Грэвел похож на шоссейный велосипед, но конструкция рамы
+                  немного отличается, и на нём стоят более широкие покрышки, всё
+                  для того чтобы проехать по лёгкому бездорожью.
+                </p>
+                <div class="type__image-1 foto-2"></div>
+                <div class="type__image-2 foto-3"></div>
+              </div>
+              <div class="type__slider item">
+                <h2 class="type__title theme">ТТ</h2>
+                <p class="type__description theme">
+                  ТТ — это велосипед для триатлона или раздельного старта,
+                  гооняют на таком велике только по равнинному асфальту, велик
+                  очень быстрые и аэродинамичный.
+                </p>
+                <div class="type__image-1 foto-3"></div>
+                <div class="type__image-2 foto-1"></div>
+              </div>
+            </div>
           </div>
           <!-- <div class="slider item-2">
             <h2 class="type__title">Шоссе</h2>
@@ -116,14 +141,14 @@
               ></button>
             </div>
           </div> -->
-          <div class="type__block-buttons">
+          <div class="type__block-buttons theme">
             <button
-              class="type__button type__button_lefl"
+              class="type__button_left type__button theme"
               type="button"
               aria-label="Кнопка переключения"
             ></button>
             <button
-              class="type__button type__button_right"
+              class="type__button_right type__button theme"
               type="button"
               aria-label="Кнопка переключения"
             ></button>
