--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 </p>
                 <div class="type__image-1 foto-1"></div>
                 <div class="type__image-2 foto-2"></div>
+                <div class="type__gradient_way"></div>
               </div>
               <div class="type__slider item">
                 <h2 class="type__title theme">Грэвел</h2>
@@ -84,6 +85,7 @@
                 </p>
                 <div class="type__image-1 foto-2"></div>
                 <div class="type__image-2 foto-3"></div>
+                <div class="type__gradient_gravel"></div>
               </div>
               <div class="type__slider item">
                 <h2 class="type__title theme">ТТ</h2>
@@ -94,53 +96,11 @@
                 </p>
                 <div class="type__image-1 foto-3"></div>
                 <div class="type__image-2 foto-1"></div>
+                <div class="type__gradient_tt"></div>
               </div>
             </div>
           </div>
-          <!-- <div class="slider item-2">
-            <h2 class="type__title">Шоссе</h2>
-            <p class="type__description">
-              На шоссейном велосипеде можно ездить по асфальту на разных
-              градиентах: будь то горы или равнины. Гонки проходят в командном
-              пелотоне, но тренироваться можно и самостоятельно.
-            </p>
-            <div class="type__image-1"></div>
-            <div class="type__image-2"></div>
-            <div class="type__block-buttons">
-              <button
-                class="type__button type__button_lefl"
-                type="button"
-                aria-label="Кнопка переключения"
-              ></button>
-              <button
-                class="type__button type__button_right"
-                type="button"
-                aria-label="Кнопка переключения"
-              ></button>
-            </div>
-          </div>
-          <div class="slider iten-3">
-            <h2 class="type__title">Шоссе</h2>
-            <p class="type__description">
-              На шоссейном велосипеде можно ездить по асфальту на разных
-              градиентах: будь то горы или равнины. Гонки проходят в командном
-              пелотоне, но тренироваться можно и самостоятельно.
-            </p>
-            <div class="type__image-1"></div>
-            <div class="type__image-2"></div>
-            <div class="type__block-buttons">
-              <button
-                class="type__button type__button_lefl"
-                type="button"
-                aria-label="Кнопка переключения"
-              ></button>
-              <button
-                class="type__button type__button_right"
-                type="button"
-                aria-label="Кнопка переключения"
-              ></button>
-            </div>
-          </div> -->
+
           <div class="type__block-buttons theme">
             <button
               class="type__button_left type__button theme"
