***Вёрстка блока type :***
*слайдер*

*структура html*
*БЭМ*

	modified:   JS/index.js
	new file:   blocks/slider/__conteiner/slider__conteiner.css
	new file:   blocks/slider/__item/slider__item.css
	new file:   blocks/slider/slider.css
	new file:   blocks/type/__block-buttons/_dark/type__block-buttons_dark.css
	new file:   blocks/type/__block-buttons/type__block-buttons.css
	new file:   blocks/type/__button/_left/_dark/type__button_left_dark.css
	new file:   blocks/type/__button/_left/type__button_left.css
	new file:   blocks/type/__button/_right/_dark/type__button_right_dark.css
	new file:   blocks/type/__button/_right/type__button_right.css
	new file:   blocks/type/__button/type__button.css
	new file:   blocks/type/__card/type__card.css
	new file:   blocks/type/__description/_dark/type__description_dark.css
	new file:   blocks/type/__description/type__description.css
	new file:   blocks/type/__foto/_foto-1/type__foto_foto-1.css
	new file:   blocks/type/__foto/_foto-2/type__foto_foto-2.css
	new file:   blocks/type/__foto/_foto-3/type__foto_foto-3.css
	new file:   blocks/type/__gradient/_gravel/type__gradient_gravel.css
	new file:   blocks/type/__gradient/_tt/type__gradient_tt.css
	new file:   blocks/type/__gradient/_way/type__gradient_way.css
	new file:   blocks/type/__image-1/type__image-1.css
	new file:   blocks/type/__image-2/type__image-2.css
	new file:   blocks/type/__line/type__line.css
	new file:   blocks/type/__title/_dark/type__title_dark.css
	new file:   blocks/type/__title/type__title.css
	new file:   blocks/type/type.css
	modified:   index.html
	modified:   pages/index.css

--- a/index.html
+++ b/index.html
@@ -63,39 +63,39 @@
       <main class="main">
         <section class="type">
           <div class="type__line"></div>
-          <div class="wrapper">
-            <div class="slider-box">
-              <div class="type__slider item">
+          <div class="slider">
+            <div class="slider__conteiner">
+              <div class="type__card slider__item">
                 <h2 class="type__title theme">Шоссе</h2>
                 <p class="type__description theme">
                   На шоссейном велосипеде можно ездить по асфальту на разных
                   градиентах: будь то горы или равнины. Гонки проходят в
                   командном пелотоне, но тренироваться можно и самостоятельно.
                 </p>
-                <div class="type__image-1 foto-1"></div>
-                <div class="type__image-2 foto-2"></div>
+                <div class="type__image-1 type__foto_foto-1"></div>
+                <div class="type__image-2 type__foto_foto-2"></div>
                 <div class="type__gradient_way"></div>
               </div>
-              <div class="type__slider item">
+              <div class="type__card slider__item">
                 <h2 class="type__title theme">Грэвел</h2>
                 <p class="type__description theme">
                   Грэвел похож на шоссейный велосипед, но конструкция рамы
                   немного отличается, и на нём стоят более широкие покрышки, всё
                   для того чтобы проехать по лёгкому бездорожью.
                 </p>
-                <div class="type__image-1 foto-2"></div>
-                <div class="type__image-2 foto-3"></div>
+                <div class="type__image-1 type__foto_foto-2"></div>
+                <div class="type__image-2 type__foto_foto-3"></div>
                 <div class="type__gradient_gravel"></div>
               </div>
-              <div class="type__slider item">
+              <div class="type__card slider__item">
                 <h2 class="type__title theme">ТТ</h2>
                 <p class="type__description theme">
                   ТТ — это велосипед для триатлона или раздельного старта,
                   гооняют на таком велике только по равнинному асфальту, велик
                   очень быстрые и аэродинамичный.
                 </p>
-                <div class="type__image-1 foto-3"></div>
-                <div class="type__image-2 foto-1"></div>
+                <div class="type__image-1 type__foto_foto-3"></div>
+                <div class="type__image-2 type__foto_foto-1"></div>
                 <div class="type__gradient_tt"></div>
               </div>
             </div>
