--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           aria-label="Кнопка тёмной темы"
         ></button>
       </div>
-      <!-- <footer class="footer theme">
+      <footer class="footer theme">
         <div class="footer__subscribe-block">
           <h2 class="footer__title theme">Подпишитесь на рассылку —</h2>
           <form class="footer__form" action="">
@@ -214,7 +214,7 @@
             ></button>
           </div>
         </div>
-      </footer> -->
+      </footer>
     </div>
 
     <script src="./JS/index.js"></script>
