--- a/index.html
+++ b/index.html
@@ -61,7 +61,74 @@
         </div>
       </section>
       <main class="main">
-        <section class="first-block">
+        <section class="bicycles">
+          <div class="line"></div>
+          <div class="aa">
+            <h2 class="bicycles__title">Велосипеды</h2>
+            <ul class="nav-block nav-block_bicycles">
+              <li class="nav-block__wrapper">
+                <a
+                  href="#"
+                  class="nav-block__link_bicycles nav-block__link theme"
+                  >Шоссе</a
+                >
+              </li>
+              <li class="nav-block__wrapper">
+                <a
+                  href="#"
+                  class="nav-block__link_bicycles nav-block__link theme"
+                  >Грэвел</a
+                >
+              </li>
+              <li class="nav-block__wrapper">
+                <a
+                  href="#"
+                  class="nav-block__link_bicycles nav-block__link theme"
+                  >TT</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="slider_">
+            <div class="slider__container_1">
+              <!--ul.bicycles__block-cards>(ul.bicycles__card>((li.bicycles__image + li.bicycles__model)*3)-->
+
+              <table class="bicycles__cards">
+                <tr class="bicycles__images">
+                  <td class="bicycles__image"></td>
+                  <td class="bicycles__image"></td>
+                  <td class="bicycles__image"></td>
+                </tr>
+                <tr class="bicycles__models">
+                  <td class="bicycles__model"></td>
+                  <td class="bicycles__model"></td>
+                  <td class="bicycles__model"></td>
+                </tr>
+              </table>
+
+              <!--
+
+              -->
+              <!--
+              <div class="bicycles__block-cards">
+                <div class="bicycles__card"></div>
+                <div class="bicycles__foto"></div>
+                <div class="bicycles__foto"></div>
+              </div>
+              <div class="bicycles__card">
+                <div class="bicycles__foto"></div>
+                <div class="bicycles__foto"></div>
+                <div class="bicycles__foto"></div>
+              </div>
+              <div class="bicycles__card">
+                <div class="bicycles__foto"></div>
+                <div class="bicycles__foto"></div>
+                <div class="bicycles__foto"></div>
+              </div>-->
+            </div>
+          </div>
+        </section>
+        <!-- <section class="first-block">
           <div class="first-block__stiky-image"></div>
           <h1 class="first-block__title theme">Шоссе, ТТ и Грэвел</h1>
           <p class="first-block__description theme">
@@ -159,14 +226,13 @@
             </li>
           </ul>
           <div class="training__image"></div>
-        </section>
-        -->
+        </section> -->
       </main>
       <!--
 
 
 -->
-      <!-- <p class="par">Тренировки</p> -->
+
       <div class="switch center">
         <button
           class="switch__button-light theme"
