--- a/index.html
+++ b/index.html
@@ -63,68 +63,60 @@
       <main class="main">
         <section class="bicycles">
           <div class="line"></div>
-          <div class="aa">
-            <h2 class="bicycles__title">Велосипеды</h2>
-            <ul class="nav-block nav-block_bicycles">
-              <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link_bicycles nav-block__link theme"
-                  >Шоссе</a
-                >
-              </li>
-              <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link_bicycles nav-block__link theme"
-                  >Грэвел</a
-                >
-              </li>
-              <li class="nav-block__wrapper">
-                <a
-                  href="#"
-                  class="nav-block__link_bicycles nav-block__link theme"
-                  >TT</a
-                >
-              </li>
-            </ul>
-          </div>
+
+          <h2 class="bicycles__title">Велосипеды</h2>
+          <ul class="nav-block nav-block_bicycles">
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+                >Шоссе</a
+              >
+            </li>
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+                >Грэвел</a
+              >
+            </li>
+            <li class="nav-block__wrapper">
+              <a href="#" class="nav-block__link_bicycles nav-block__link theme"
+                >TT</a
+              >
+            </li>
+          </ul>
+
           <div class="slider_">
             <div class="slider__container_1">
-              <!--ul.bicycles__block-cards>(ul.bicycles__card>((li.bicycles__image + li.bicycles__model)*3)-->
-
-              <table class="bicycles__cards">
-                <tr class="bicycles__images">
-                  <td class="bicycles__image"></td>
-                  <td class="bicycles__image"></td>
-                  <td class="bicycles__image"></td>
-                </tr>
-                <tr class="bicycles__models">
-                  <td class="bicycles__model"></td>
-                  <td class="bicycles__model"></td>
-                  <td class="bicycles__model"></td>
-                </tr>
-              </table>
-
-              <!--
-
-              -->
-              <!--
-              <div class="bicycles__block-cards">
-                <div class="bicycles__card"></div>
-                <div class="bicycles__foto"></div>
-                <div class="bicycles__foto"></div>
+              <div class="bicycles__cards">
+                <div class="bicycles__card a1">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cervelo Caledonia-5</p>
+                </div>
+                <div class="bicycles__card a2">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cervelo Caledonia-5</p>
+                </div>
+                <div class="bicycles__card a3">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cervelo Caledonia-5</p>
+                </div>
               </div>
-              <div class="bicycles__card">
-                <div class="bicycles__foto"></div>
-                <div class="bicycles__foto"></div>
-                <div class="bicycles__foto"></div>
-              </div>
-              <div class="bicycles__card">
-                <div class="bicycles__foto"></div>
-                <div class="bicycles__foto"></div>
-                <div class="bicycles__foto"></div>
-              </div>-->
             </div>
           </div>
         </section>
