--- a/index.html
+++ b/index.html
@@ -85,36 +85,100 @@
 
           <div class="slider_">
             <div class="slider__container_1">
-              <div class="bicycles__cards">
-                <div class="bicycles__card a1">
+              <div class="bicycles__block-cards bicycles__block-cards_active">
+                <div class="bicycles__card bicycles__card_place-1">
                   <div class="bicycles__box-image">
                     <img
                       class="bicycles__image"
-                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      src="./images/images-bicycles/Cervelo_Caledonia_5.jpg"
                       alt=""
                     />
                   </div>
                   <p class="bicycles__model">Cervelo Caledonia-5</p>
                 </div>
-                <div class="bicycles__card a2">
+                <div class="bicycles__card bicycles__card_place-2">
                   <div class="bicycles__box-image">
                     <img
                       class="bicycles__image"
-                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      src="./images/images-bicycles/Cannondale_Systemsix_Himod.jpg"
                       alt=""
                     />
                   </div>
                   <p class="bicycles__model">Cervelo Caledonia-5</p>
                 </div>
-                <div class="bicycles__card a3">
+                <div class="bicycles__card bicycles__card_place-3">
                   <div class="bicycles__box-image">
                     <img
                       class="bicycles__image"
-                      src="./images/images-bicycles/Cervelo-Aspero-GRX-810.png"
+                      src="./images/images-bicycles/Trek_Domane_SL_7.jpg"
                       alt=""
                     />
                   </div>
                   <p class="bicycles__model">Cervelo Caledonia-5</p>
+                </div>
+              </div>
+              <div class="bicycles__block-cards a2">
+                <div class="bicycles__card bicycles__card_place-1">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cervelo_Caledonia_5.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cannondale Systemsix Himod</p>
+                </div>
+                <div class="bicycles__card bicycles__card_place-2">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cannondale_Systemsix_Himod.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cannondale Systemsix Himod</p>
+                </div>
+                <div class="bicycles__card bicycles__card_place-3">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Trek_Domane_SL_7.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Cannondale Systemsix Himod</p>
+                </div>
+              </div>
+              <div class="bicycles__block-cards a3">
+                <div class="bicycles__card bicycles__card_place-1">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cervelo_Caledonia_5.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Trek Domane SL-7</p>
+                </div>
+                <div class="bicycles__card bicycles__card_place-2">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Cannondale_Systemsix_Himod.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Trek Domane SL-7</p>
+                </div>
+                <div class="bicycles__card bicycles__card_place-3">
+                  <div class="bicycles__box-image">
+                    <img
+                      class="bicycles__image"
+                      src="./images/images-bicycles/Trek_Domane_SL_7.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="bicycles__model">Trek Domane SL-7</p>
                 </div>
               </div>
             </div>
@@ -275,8 +339,8 @@
         </div>
       </footer> -->
     </div>
-
-    <script src="./JS/index.js"></script>
+    <template id="card"> </template>
+    <script src="./js/index.js"></script>
     <!-- <script src="./anton.js"></script> -->
   </body>
 </html>
