--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="bicycles">
           <div class="line"></div>
 
-          <h2 class="bicycles__title">Велосипеды</h2>
+          <h2 class="bicycles__title theme">Велосипеды</h2>
           <ul class="nav-block nav-block_bicycles">
             <li class="nav-block__wrapper">
               <a href="#" class="nav-block__link_bicycles nav-block__link theme"
@@ -94,7 +94,7 @@
                       alt=""
                     />
                   </div>
-                  <p class="bicycles__model">Cervelo Caledonia-5</p>
+                  <p class="bicycles__model theme">Cervelo Caledonia-5</p>
                 </div>
                 <div class="bicycles__card bicycles__card_place-2">
                   <div class="bicycles__box-image">
@@ -114,7 +114,7 @@
                       alt=""
                     />
                   </div>
-                  <p class="bicycles__model">Cervelo Caledonia-5</p>
+                  <p class="bicycles__model theme">Cervelo Caledonia-5</p>
                 </div>
               </div>
               <div class="bicycles__block-cards a2">
@@ -180,6 +180,36 @@
                   </div>
                   <p class="bicycles__model">Trek Domane SL-7</p>
                 </div>
+              </div>
+              <div class="ww">
+                <svg
+                  class="qq qq_active"
+                  width="4"
+                  height="4"
+                  viewBox="0 0 4 4"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="2" cy="2" r="2" fill="auto" /></svg
+                ><svg
+                  class="qq"
+                  width="4"
+                  height="4"
+                  viewBox="0 0 4 4"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="2" cy="2" r="2" fill="auto" /></svg
+                ><svg
+                  class="qq"
+                  width="4"
+                  height="4"
+                  viewBox="0 0 4 4"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle cx="2" cy="2" r="2" fill="auto" />
+                </svg>
               </div>
             </div>
           </div>
