--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
           <div class="slider_">
             <div class="slider__container_1">
-              <div class="bicycles__block-cards bicycles__block-cards_active">
+              <div class="bicycles__block-cards">
                 <div class="bicycles__card bicycles__card_place-1">
                   <div class="bicycles__box-image">
                     <img
@@ -369,7 +369,16 @@
         </div>
       </footer> -->
     </div>
-    <template id="card"> </template>
+    <template id="forms">
+      <div class="bicycles__block-cards"></div>
+      <div class="bicycles__card">
+        <div class="bicycles__box-image">
+          <img class="bicycles__image" src="#" alt="" />
+        </div>
+        <p class="bicycles__model theme"></p>
+      </div>
+    </template>
+    <script src="./js/datacards.js"></script>
     <script src="./js/index.js"></script>
     <!-- <script src="./anton.js"></script> -->
   </body>
